message GetMapObjectsMessage {
	repeated uint64 cell_ids = 1 [packed=true];
	repeated int64 since_timestamp_ms = 2 [packed=true];
	required double latitude = 3;
	required double longitude = 4;
}
